<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">hello</string>
    <string name="app_name">tendril-cirrus</string>
     <string name="tendril_description">Connects to Tendril App Developer Program Server</string>
     <string name="user_profile_title">User Profile Info:</string>
     <string name="device_list_title">List of Devices:</string>
     <string name="device_detail_title">Detailed Device Info:</string>
     <string name="pricingprogram_title">Pricing Program Details:</string>
     <string name="loginTitle">Login to Tendril Services:</string>
     <string name="email">Email:</string>
     <string name="password">Password:</string>
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
     <string name="about">About</string>
     <string name="login">Login</string>
     <string name="about_title">About Tendril-Cirrus</string>
     <string name="about_desc">This is an application built to demonstrate some of the interesting things that are possible with the Tendril API.</string>
     <string name="about_school">University of Colorado at Boulder: Computer Science Senior Project</string>
	 <string name="about_team_name">Team Cirrus:</string>
	 <string name="about_team_contributors">Dylan Canfield, Katie Hegarty, Tyler Howarth, Will McNeill, Dan Richelson</string>
	 <string name="about_more_info">Cirrus on Github:</string>
	 <string name="about_github_link">https://github.com/drichelson/4308Cirrus</string>
     <string name="smartHeat_title">SmartHeat</string>
     <string name="smartHeat_desc">Enable the use of GPS for controlling your home\'s thermostat</string>
     <string name="gpsFreq_title">GPS Polling Frequency</string>
     <string name="gpsFreq_desc">This setting controls how often the application polls for location changes</string>
     <string name="gpsRadius_title">GPS Radius in Miles</string>
     <string name="gpsRadius_desc">When within this radius, the thermostat will be set to the at home temp; when outside the radius, the thermostat will be set to the away temp.</string>
     <string name="setHome_title">Set home location</string>
     <string name="setHome_desc">Use current location as home location</string>
     <string name="homeTemp_title">At Home Temp</string>
     <string name="homeTemp_desc">Set the thermostat to this temp when at or near home</string>
     <string name="awayTemp_title">Away from Home Temp</string>
     <string name="awayTemp_desc">Set the thermostat to this temp when away from home</string>
     <string name="logout_title">Logout</string>
     <string name="logout_desc">Delete access token and logout</string>
     <string name="settings">Settings</string>
</resources>
