<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
  		android:orientation="horizontal" 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="10dip"  >

  		<TextView
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_marginLeft="5dp"
  		    android:text="@string/about_title"
  		    android:textColor="@color/tendril_green"
  		    android:textSize="22sp" />
	
  	</LinearLayout>
  	
    <LinearLayout 
  		android:id="@+id/AboutMenu"
  		android:layout_width="wrap_content" 
  		android:layout_height="wrap_content" 
  		android:orientation="vertical" 
  		android:layout_marginTop="5dp"
  		android:layout_marginLeft="5dp"
  		android:layout_marginRight="5dp" 
  		android:visibility="visible">
  		
  		<TextView 
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content" 
  			android:text="@string/about_desc" 
  			android:textSize="14sp" 
  			/>
  		
  		<TextView
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_marginTop="10dp"
  		    android:text="@string/about_team_name"
  		    android:textColor="@color/tendril_green"
  		    android:textSize="22sp" />
  		
  		<TextView 
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content" 
  			android:text="@string/about_school" 
  			android:textSize="14sp" 
  			/>
  		
  		<TextView 
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content" 
  			android:text="@string/about_team_contributors" 
  			android:textSize="14sp" 
  			/>
  		
  		<TextView
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_marginTop="10dp"
  		    android:text="@string/about_more_info"
  		    android:textColor="@color/tendril_green"
  		    android:textSize="22sp" />
  		
  		
  		<TextView 
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content" 
  			android:text="@string/about_github_link" 
  			android:autoLink="all"
  			android:textSize="14sp" 
  			/>
  		
  		
  	</LinearLayout>

    

</LinearLayout>
