<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/backrepeat"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/cirrus_logo_header" />

    <TextView
        android:id="@+id/text_view_description"
        android:text="@string/tendril_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dip"
        />
    
    <LinearLayout 
        android:id="@+id/LoginMenu"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" 
        android:layout_marginTop="20dip" 
        android:visibility="gone">
        <TextView  
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" 
            android:layout_gravity="center" 
            android:text="@string/loginTitle" 
            android:textSize="18sp"/>
        <LinearLayout 
            android:orientation="horizontal" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
            android:layout_marginTop="8dip">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"  
                android:text="@string/email" 
                android:textSize="12sp" 
                android:layout_marginTop="0dip"/>
            <EditText 
                android:id="@+id/EmailInput"
                android:minWidth="150dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"/>
        </LinearLayout>
        <LinearLayout 
            android:orientation="horizontal" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
            android:layout_marginTop="8dip">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" 
                android:text="@string/password" 
                android:textSize="12sp" 
                android:layout_marginTop="0dip"/>
            <EditText 
                android:id="@+id/PasswordInput"
                android:minWidth="150dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginLeft="13dip"/>
        </LinearLayout>

        <LinearLayout 
            android:orientation="horizontal" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
            android:layout_marginTop="8dip">
            <Button
                android:id="@+id/LoginCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:layout_gravity="center"
                android:layout_span="2"
                android:text="@string/cancel"
                android:enabled="true">
            </Button>
            <Button
                android:id="@+id/LoginSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:layout_gravity="center"
                android:layout_span="2"
                android:text="@string/submit"
                android:enabled="true">
            </Button>
        </LinearLayout>

    </LinearLayout>
    
</LinearLayout>
